--- a/ZLSwiftFM/Podfile
+++ b/ZLSwiftFM/Podfile
@@ -9,5 +9,7 @@ pod 'SnapKit', '~> 3.1.2'
 pod 'Kingfisher', '~> 3.2.4'
 pod 'Alamofire', '~> 4.2.0'
 pod 'SwiftyJSON', '~> 3.1.3'
+pod 'HandyJSON', '~> 1.5.2'
+#pod 'RAMAnimatedTabBarController', '~> 2.1.1'
 
 end
